--- a/contact.html
+++ b/contact.html
@@ -74,10 +74,10 @@
     <!-- Footer -->
     <div id="footer">
      <div class="container">
-     <h3><span style="text-align: center; font-size: 25px;">Merci de votre visite</span></h3>
       <hr />
-            <div class="row">
+      <div class="row">
        <div class="12u">
+         <!-- Contact -->
          <section class="contact">
           <header>
            <h3>Suivez-nous sur les réseaux sociaux</h3>
