--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Footer -->
     <div id="footer">
      <div class="container">
-     <h3><span style="text-align: center; font-size: 25px;">Merci de votre visite</span></h3>
+     <h3><span class="merci">Merci de votre visite</span></h3>
       <hr />
             <div class="row">
        <div class="12u">
